# bookish-carnival

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md
benchmark/: CMakeLists.txt
benchmark/source/: irregularia_benchmark.cpp  max.cpp  maxelem.cpp  maxred.cpp  promred.cpp  sumred.cpp  util.hpp  xpy.cpp
benchmarks/: CMakeLists.txt
build-scripts/: build-dev.sh  build-prod.sh  cmake-dev.sh  cmake-prod.sh  debug.sh  release.sh  run-benchmarks.sh  run-tests.sh
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
include/cpu/: hw.hpp
include/irregularia/: accbench_targets.hpp  mi.hpp  milimits.hpp  mitraits.hpp  multiple_int.hpp
include/irregularia/cpu/: hw.hpp  multiple_int.hpp
include/irregularia/device/: hw.cuh
scripts/: big-bench.sh  big-bench_maxelem.sh  big-bench_maxred.sh  big-bench_sumred.sh  big-bench_xpy.sh  build-dev.sh  build-prod.sh  cmake-dev.sh  cmake-prod.sh  debug.sh  format.sh  plot-benchmark.sh  plot-benchmarks.sh  plot-benchmarks_maxelem.sh  plot-benchmarks_maxred.sh  plot-benchmarks_sumred.sh  plot-benchmarks_xpy.sh  plot.py  release.sh  run-benchmarks.sh  run-tests.sh  run.sh
singularity/: big-bench.sh  big-bench_maxelem.sh  big-bench_maxred.sh  big-bench_sumred.sh  big-bench_xpy.sh  dbuild.sh  rbuild.sh  small-bench.sh  tests.sh
source/: CMakeLists.txt  main.cpp
source/cpu/: CMakeLists.txt  hw.cpp
source/device/: CMakeLists.txt  thrust.cpp  thrust.cu
test/: CMakeLists.txt
test/source/: CMakeLists.txt  basic_test.cpp  bookish-carnival_test.cpp  casting.cpp  decoding.cpp  downcasting.cpp  encoding.cpp  irregularia_test.cpp  lims.cpp  operations.cpp  traits.cpp  upcasting.cpp
